Fixed z-index for carousel arrows

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -364,6 +364,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    z-index: 2;
     .arrow-left {
       width: 0; 
       height: 0; 
@@ -383,6 +384,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    z-index: 2;
     .arrow-right {
       width: 0; 
       height: 0; 
